--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ cache:
 #    - webapp/node_modules
 
 before_install:
-  # install meteor
+  - "npm install -g phantomjs"
+  - "export PHANTOM_PATH=`which phantomjs`"
   - "curl https://install.meteor.com | /bin/sh"
 
 script: meteor --test
